[gd_scene load_steps=4 format=2]

[ext_resource path="res://combat/Combatant.gd" type="Script" id=1]
[ext_resource path="res://img/combat/combat_token.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

onready var camera = get_tree().root.find_node('Camera2D', true, false)
var dupe

func _ready():
	for child in get_children():
		child.set_drag_forwarding(self)

func _process(_delta):
	pass
	if dupe:
		dupe.rect_global_position = get_global_mouse_position()

func get_drag_data_fw(pos, forwardedFrom):
#	var icon = TextureRect.new()
#	icon.texture = load('res://img/combat/combat_token.png')
	var icon = Control.new()
	if dupe: 
		dupe.queue_free()
	dupe = get_parent().duplicate(0)
	dupe.rect_position = Vector2.ZERO
	#dupe.rect_position = dupe.get_global_rect().position - get_global_mouse_position()
	dupe.modulate.a = 0.3
	icon.add_child(dupe) #load('res://combat/CombatantPreview.tscn').instance()
	set_drag_preview(icon)
	return get_parent()
"

[node name="Combatant" type="Control"]
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
mouse_filter = 1
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconBackground" type="TextureRect" parent="Control"]
margin_left = 1.0
margin_right = 101.0
margin_bottom = 100.0
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Control"]
margin_right = 200.0
margin_bottom = 341.0
size_flags_horizontal = 0
size_flags_vertical = 0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntityName" type="Label" parent="Control"]
anchor_right = 1.0
margin_left = -112.854
margin_top = 100.0
margin_right = 111.146
margin_bottom = 114.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "asdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Combatant_gui_input"]
[connection signal="mouse_entered" from="Control/EntityName" to="Control" method="_on_EntityName_mouse_entered"]
